--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,5 @@
-world: null
+world: null #The name of the world that you want the maps to load into. Default should be the overworld.
 daylight-cycle: false
 weather-cycle: false
+fireball-strength: 2 #Default is 2
+death-message: '{player} has died'
