--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,6 @@ daylight-cycle: false
 weather-cycle: false
 fireball-strength: 2 #Default is 2
 death-message: '{player} has died'
+join-message: '&c{player} &6has joined'
+leave-message: '{player} has left'
+can-break-own-root: false
