Added freeze tag gamemode, and fixed a bug with voting

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ commands:
     permission: rootwars.admin
     description: Command related to modifying things related to the game.
     usage: "Usage: /rootwars [start | stop] [game mode name] [map name]"
+  NameTeam:
+    description: Sets the current team name.
