--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,4 @@ join-message: '&c{player} &6has joined'
 leave-message: '{player} has left'
 can-break-own-root: false
 server-watermark: '&dRoot Wars &fon &eLopixel'
+enable-bomb-tag-game-mode: false
